<?xml version="1.0" encoding="utf-8"?>
<!-- @TODO We should move all static strings into here. Most of them are still
     hardcoded, which makes it very hard to translate to other languages. -->
<resources>
    <string name="app_name">joind.in</string>

    <!-- Format of date/time strings from the API -->
    <string name="apiDateFormat">yyyy-MM-dd\'T\'HH:mm:ssZ</string>

    <!-- API URL to use -->
    <string name="apiURL">https://api.joind.in/v2.1/</string>

    <!-- OAuth URL to use, and the callback -->
    <string name="oauthURL">http://joind.in/user/oauth_allow</string>
    <string name="oauthDeniedMessage">Couldn\'t authenticate with joind.in</string>
    <string name="oauthGenericErrorMessage">There was a problem authenticating you</string>

    <!-- Titles -->
    <string name="titleMain">joind.in</string>
    <string name="titleSettings">Settings</string>

    <!-- Option menu strings -->
    <string name="OptionMenuSettings">Settings</string>
    <string name="OptionMenuClearCache">Clear cache</string>
    <string name="OptionMenuAbout">About</string>

    <string name="OptionMenuSearch">Search</string>
    <string name="OptionMenuSortDate">Sort by date</string>
    <string name="OptionMenuSortTitle">Sort by name</string>
    <string name="SearchHint">Search event names</string>

    <string name="TalkMenuFilter">Filter by…</string>
    <string-array name="TalkMenuFilterArray">
        <item>All talks</item>
        <item>Starred talks</item>
    </string-array>

    <!--  Context menu strings -->
    <string name="ContextMainAddToFavorite">Add to favorite list</string>
    <string name="ContextMainRemoveFromFavorite">Remove from favorite list</string>

    <!-- Event details strings -->
    <string name="EventDetailsEventLocLabel">Venue:</string>
    <string name="EventDetailsEventHashtagsLabel">Hashtags:</string>
    <string name="EventDetailsImAttending">I\'m attending</string>

    <!-- Talk details strings -->
    <string name="TalkDetailSubtitle">Talk details</string>
    <string name="TalkDetailSpeakerLabel">Speaker: </string>

    <!-- Comment strings -->
    <string name="CommentYourCommentLabel">Your comment:</string>
    <string name="CommentButtonSend">Send</string>
    <string name="CommentButtonCancel">Cancel</string>

    <!-- Preference activity strings -->
    <string name="prefAuthLoginTitle">Sign me into joind.in</string>
    <string name="prefAuthLoggedInAs">Signed in as %s</string>
    <string name="prefAuthLogInButton">Sign in</string>
    <string name="prefAuthLogOutButton">Sign out</string>
    <string name="prefAttendOnlyTitle">Attended only</string>
    <string name="prefAttendOnlySummary">Only display past attended events</string>
    <string name="prefLoadImagesTitle">Load logos and gravatars</string>
    <string name="prefLoadImagesSummary">Should the application load (and cache) event logo and user gravatars?</string>
    <string name="prefDefaultTabTitle">Default event tab</string>
    <string name="prefDefaultTabSummary">Which event tab should be loaded on startup?</string>

    <string name="activityAddCommentTitle">Add comment to %s</string>
    <string name="activityAddCommentSpinnerOneStar">One star</string>
    <string name="activityAddCommentSpinnerTwoStars">Two stars</string>
    <string name="activityAddCommentSpinnerThreeStars">Three stars</string>
    <string name="activityAddCommentSpinnerFourStars">Four stars</string>
    <string name="activityAddCommentSpinnerFiveStars">Five stars</string>
    <string name="activityAddCommentSendingComment">Sending comment…</string>
    <string name="activityAddCommentPrivateCommentLabel">Mark this comment as private</string>

    <string name="activityEventDetailTitle">Event details</string>

    <string name="activityMainAttending">%d attending</string>
    <string name="activityMainEventsHot">Hot events</string>
    <string name="activityMainEventsPast">Past events</string>
    <string name="activityMainEventsUpcoming">Upcoming events</string>
    <string name="activityMainEventsMyEvent">My events</string>

    <string name="activityMainNoEventsToList">No events to list</string>

    <string name="activityTalkListFilteringByHeader">Filtering by starred talks</string>

    <string name="activityTalkDetailAuthRequiredForStarring">You must be signed in to star a talk</string>

    <string name="JIRestValidConnectionError">Couldn\'t establish a valid connection</string>
    <string name="JIRestProtocolError">There was a protocol based error: %s</string>
    <string name="JIRestSocketTimeout">Timeout while connecting to joind.in website.</string>
    <string name="JIRestIOError">There was an IO stream related error: %s</string>
    <string name="JIRestUnknownError">Unknown error: %s</string>

    <!-- Global strings, can occur everywhere -->
    <string name="generalPleaseWait">Please wait…</string>
    <string name="generalViewCommentSingular">Comment (%d)</string>
    <string name="generalViewCommentPlural">Comments (%d)</string>
    <string name="generalViewCommentNoCount">Comments</string>

    <string name="generalViewTrackSingular">Track (%d)</string>
    <string name="generalViewTrackPlural">Tracks (%d)</string>
    <string name="generalViewTrackNoCount">Tracks</string>

    <string name="generalViewTalkSingular">Talk (%d)</string>
    <string name="generalViewTalkPlural">Talks (%d)</string>
    <string name="generalViewTalkNoCount">Talks</string>

    <string name="generalEventTalksSingular">%d event talk</string>
    <string name="generalEventTalksPlural">%d event talks</string>
    <string name="generalEventTalksSectionHeaderFormat">d LLLL yyyy</string>

    <string name="generalEventTracksSingular">%d event track</string>
    <string name="generalEventTracksPlural">%d event tracks</string>

    <string name="generalTime" formatted="false">Time start: %02d:%02d</string>
    <string name="generalEventCountSingular">%d event</string>
    <string name="generalEventCountPlural">%d events</string>
    <string name="generalCommentSingular">%d comment</string>
    <string name="generalCommentPlural">%d comments</string>
    <string name="generalAnonymous">Anonymous</string>
    <string name="generalAddComment">Add new comment</string>
    <string name="generalFailPostComment">Warning: Couldn\'t post comment</string>
    <string name="generalSuccessPostComment">Comment posted successfully</string>

    <string name="generalSuccessFullyAttended">Successfully attended</string>
    <string name="generalSuccessFullyUnAttended">Successfully unattended</string>
    <string name="generatelAttendingError">Attending error: %s</string>

    <string name="generalSuccessStarred">Successfully starred</string>
    <string name="generalSuccessUnstarred">Successfully unstarred</string>
    <string name="generalStarringError">Starring error: %s</string>
    <string name="generalCouldntUpdateStarredStatus">Couldn't update talk starred status</string>

    <string name="generalAboutTitle">About…</string>
    <string name="generalAboutButtonCaption">Close</string>
    <string name="generalAboutMessage">The joind.in Android application is part of the joind.in open source project. Visit http://joind.in/ to find out how you can get involved!\n\nPlease send any bug reports and feature requests to android@joind.in</string>

    <string name="generalCacheCleared">The cache is cleared</string>

    <string name="authenticatorAccountType">in.joind</string>
    <string name="authenticatorTitle">Sign in to joind.in</string>
    <string name="authHelperText">Enter your joind.in details below</string>
    <string name="authHintUsername">joind.in username</string>
    <string name="authHintPassword">joind.in password</string>
    <string name="authSignInButton">Sign in</string>
    <string name="authCancelButton">Cancel</string>
    <string name="authNotSignedIn">You\'re not signed in</string>
    <string name="authSignInToJoindIn">Sign in to joind.in</string>
    <string name="authSignInProgressText">Signing you in to joind.in…</string>
    <string name="authTokenType">oauth2</string>
    <string name="authGravatarHash">gravatar_hash</string>
    <string name="authUserURI">uri</string>
    <string name="authUserURITalks">talk_uri</string>
    <string name="authUserURIAttendedEvents">attended_events_uri</string>
    <string name="authUserURIHostedEvents">hosted_events_uri</string>
    <string name="authUserURITalkComments">talk_comments_uri</string>
    <string name="authOAuthPropertiesNotFound">Some configuration is missing. Try reinstalling?</string>
    <string name="authSignedInOK">Signed in!</string>

    <!-- some error messages -->
    <string name="activityEventDetailFailedJSON">Couldn\'t retrieve event details</string>
    <string name="activityTalkCommentsFailedJSON">Couldn\'t retrieve talk details</string>

    <!-- Pull-to-refresh copy -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…</string>
    <string name="your_rating">Your rating:</string>

</resources>
