<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/OptionMenuSettings"
        android:alphabeticShortcut="S"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/clear_menu_item"
        android:title="@string/OptionMenuClearCache"
        android:alphabeticShortcut="C"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
    <item
        android:id="@+id/about_menu_item"
        android:title="@string/OptionMenuAbout"
        android:alphabeticShortcut="A"
        android:icon="@android:drawable/ic_menu_info_details"/>
    <item
        android:id="@+id/search"
        android:title="@string/OptionMenuSearch"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>
