<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/authHelperText"
        style="@style/joindinDialogTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/inner_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/authErrors"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:textColor="#ffff0000"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="16dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authUsername"
            android:hint="@string/authHintUsername"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authPassword"
            android:hint="@string/authHintPassword"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authSignInButton"
            android:id="@+id/authSignInButton"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
