<?xml version="1.0" encoding="utf-8"?>
<!-- This is the layout for adding a new comment. This could either be a event or talk comment -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/your_rating"
            android:layout_width="match_parent"
            android:id="@+id/TextViewRating" />
        <RatingBar
            android:id="@+id/CommentRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            style="@style/joindinRatingBar"
            android:layout_margin="5dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommentYourCommentLabel" />

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/CommentText"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:maxLength="1024"
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:maxLines="4"
            android:minLines="4" />
    </TableRow>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityAddCommentPrivateCommentLabel"
        android:id="@+id/CommentPrivate" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:layout_height="wrap_content"
            android:text="@string/CommentButtonCancel"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/ButtonAddCommentCancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/CommentButtonSend"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/ButtonAddCommentSend"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
