<?xml version="1.0" encoding="utf-8"?>
<!-- Detailed information about an event -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EventDetailsEventLocLabel"
                android:id="@+id/EventDetailsEventLocLabel"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/EventDetailsEventLoc"
                android:layout_gravity="start" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/EventDetailsHashtagsRow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EventDetailsEventHashtagsLabel"
                android:id="@+id/EventDetailsStubLabel"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/EventDetailsStub" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:minHeight="80dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ffffff"
        android:layout_marginBottom="5dp">

        <TextView
            android:text=""
            android:id="@+id/EventDetailsDescription"
            android:ellipsize="none"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:paddingRight="5dp"
            android:paddingLeft="5dp" />
    </ScrollView>

    <TableLayout
        android:id="@+id/TableLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#eeeeee">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:gravity="center_vertical|center_horizontal"
                android:id="@+id/ButtonEventDetailsViewTalks"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight=".50"
                android:layout_gravity="bottom"
                android:text="@string/generalViewTalkNoCount" />

            <Button
                android:layout_height="wrap_content"
                android:id="@+id/ButtonEventDetailsViewTracks"
                android:layout_marginTop="2dp"
                android:layout_width="0px"
                android:layout_weight=".50"
                android:text="@string/generalViewTrackNoCount"
                android:layout_gravity="bottom" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/ButtonEventDetailsViewComments"
                android:layout_marginTop="2dp"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight=".50"
                android:text="@string/generalViewCommentNoCount"
                android:layout_gravity="bottom" />

            <CheckBox
                android:layout_height="wrap_content"
                android:text="@string/EventDetailsImAttending"
                android:id="@+id/CheckBoxEventDetailsAttending"
                android:layout_width="0px"
                android:layout_weight=".50"
                android:layout_gravity="bottom" />
        </TableRow>
    </TableLayout>
</LinearLayout>
